# geodini

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.duckdb  Dockerfile.frontend  LICENSE  README.md  api.py  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml  helm-publish.yml
frontend/: app.js  app.py  index.html  style.css
frontend-local/: app.js  index.html
geodini/: __init__.py  cache.py  hookspecs.py  ingest.py  lib.py
geodini-chart/: values.yaml
geodini-chart/templates/: NOTES.txt  api-deployment.yaml  api-headless-service.yaml  geodini-secret.yaml  postgres-deployment.yaml  postgres-service.yaml  pvc.yaml
geodini/agents/: __init__.py  complex_agents.py  geocoder_agent.py  simple_geocoder_agent.py
geodini/agents/utils/: duckdb_exec.py  geocoder.py  postgis_exec.py
geodini/api/: api.py  mcp_server.py
geodini/tools/: agents.py  complex_agents.py  geocoder.py  hookspecs.py  lib.py  search.py
geodini/tools/utils/: duckdb_exec.py
geodini_kba/: geodini_kba.py
helm/geodini/: Chart.yaml  values.yaml
helm/geodini/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  postgres-deployment.yaml  postgres-pvc.yaml  serviceaccount.yaml
notebooks/: load_data.ipynb
plugins/geodini_kba_example/: geodini_kba.py  setup.py
scripts/: create_db.sql  create_unified_db.sql  download_overture_data.sql  init-data.sh
